--- a/style/style.css
+++ b/style/style.css
@@ -99,6 +99,9 @@ img:nth-of-type(2){
 }
 
 @media(max-width:48rem){
+    .container{
+        padding: 50px 0;
+    }
     .wrapper{
         flex-direction: column-reverse;
     }
