--- a/style/style.css
+++ b/style/style.css
@@ -26,11 +26,12 @@
 }
 
 .wrapper{
-    display: flex;
-    width: 80%;
+    display: grid;
+   width: min(80%, 1200px);
     background-color: var(--darkDesaturatedBlue);
     overflow: hidden;
     border-radius: 10px;
+    grid-template-columns: 50% 50%;
 }
 
 .stats{
@@ -100,6 +101,7 @@ img:nth-of-type(2){
 
 @media(max-width:48rem){
     .wrapper{
+        display: flex;
         flex-direction: column-reverse;
         height: 90%;
     }
@@ -109,7 +111,7 @@ img:nth-of-type(2){
     }
     .ourStats{
         flex-direction: column;
-        gap: 30px;
+        gap: 15px;
     }
     .ourStats div + div{
         margin-left:0 ;
@@ -117,8 +119,13 @@ img:nth-of-type(2){
     img:nth-of-type(1){
         display: none;
     }
+    .image{
+        width: 100%;
+        height: 100%;
+    }
     img:nth-of-type(2){
         display: block;
         width: 100%;
+        aspect-ratio: 1/1;
     }
 }
